k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: social-media-scraper
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: redis
